--- a/PDFTest/packages.config
+++ b/PDFTest/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="PDFsharp" version="1.50.4845-RC2a" targetFramework="net461" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net472" />
 </packages>
